<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.coldani3.dangoniser.screens.event.EventFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/itemTextWidth"
                    android:layout_height="@dimen/itemTextHeight"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="left"
                    android:text="@string/calendar_event"
                    android:autoSizeTextType="uniform"
                    android:autoSizePresetSizes="@array/title_sizes"
                    android:layout_centerVertical="true"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_alignParentRight="true"
                    android:text="@string/delete"/>
            </RelativeLayout>
            <EditText
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/component_border"
                android:layout_marginHorizontal="@dimen/scroll_margin">
                <RelativeLayout
                    android:id="@+id/date_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <!-- Date and weather -->
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/at"/>
                    <EditText
                        android:id="@+id/at_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/until"/>
                    <EditText
                        android:id="@+id/until_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/where"/>
                    <EditText
                        android:id="@+id/where_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="250dp"/>
                    <Button
                        android:id="@+id/here_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/here"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remind_me"/>
                    <Spinner
                        android:id="@+id/reminder_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/done_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/done"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/itemTextHeight"
                android:text="@string/notes"
                android:autoSizeTextType="uniform"
                android:autoSizePresetSizes="@array/title_sizes"
                android:layout_centerVertical="true"/>
            <com.coldani3.dangoniser.components.NotesView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/notes"/>
        </LinearLayout>
    </ScrollView>
</layout>